# Intro-to-machine-learning-project

./: .gitignore  2tierLR.csv  2tierLRNB.csv  2tierLRRF.csv  Classifying New Particle Formation.qmd  README.md  RFE2tier.csv  RFE_binary.csv  RFE_model.py  RFE_multi.csv  _quarto.yml  binaryCV.npy  feature_analysyis.py  multiCV.npy  pca.py  pca2tier.py  pcaGNB.csv  pcaLDA.csv  pcaLDA.py  pcaLR.csv  pcaNB.py  pyproject.toml  subset_selection.py
